# whitespace

./: .gitignore  CMakeLists.txt  README.md
example/: project.yaml
example/scenes/: house.yaml  scene.yaml
includes/: AppLayer.h  Application.h  AssetExplorer.h  AssetManager.h  CanvasLayer.h  DataPersistanceLayer.h  Event.h  FunctionRibbon.h  Inspector.h  Layer.h  ProjectLayer.h  SceneElement.h  UIElements.h  UILayer.h  Utils.h
src/: AppLayer.cpp  Application.cpp  AssetExplorer.cpp  AssetManager.cpp  CanvasLayer.cpp  DataPersistanceLayer.cpp  FunctionRibbon.cpp  Inspector.cpp  Layer.cpp  UIElements.cpp  UILayer.cpp  Utils.cpp  main.cpp
